feat: 버전 다운그레이드